Mon May 30 14:50:25 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_substr, rb_str_aref): refactor not to create
	  unnecessary empty string.

	* string.c (str_byte_substr, str_byte_aref): ditto.

Mon May 30 00:09:37 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/-test-/auto_ext.rb: fixed a heedless bug introduced at r55198.
	  this change will make RubyCI green.

Sun May 29 22:58:19 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* regexec.c (ONIGENC_IS_MBC_ASCII_WORD): redefine optimized one.
	  WORD of Ruby's ascii compatible encoding is always [a-zA-Z0-9_].

Sun May 29 22:44:19 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* regexec.c (match_at): make compilers optimize harder.

Sun May 29 12:08:42 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/-test-/auto_ext.rb (auto_ext): utility method to create
	  extension libraries for tests.

Sat May 28 20:40:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-additional.el (ruby-insert-heredoc-code-block): insert
	  here document code block for assert_separately mainly.

Sat May 28 20:34:19 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/test_unicode_normalize.rb: Add test to check for availability of
	  Unicode data file; refactoring; fix an error with tests for destructive
	  method (unicode_normalize!).

Sat May 28 19:08:36 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_comprehensive.rb: Add error messages to tests
	  for data file availability; refactoring.

Sat May 28 14:00:10 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/lib/openssl/ssl.rb (SSLSocket): Move the implementation of
	  SSLSocket#initialize to C. Initialize the SSL (OpenSSL object) in it.
	  Currently this is delayed until ossl_ssl_setup(), which is called from
	  SSLSocket#accept or #connect. Say we call SSLSocket#hostname= with an
	  illegal value. We expect an exception to be raised in #hostname= but
	  actually we get it in the later SSLSocket#connect. Because the SSL is